--- a/src/components/time.astro
+++ b/src/components/time.astro
@@ -14,7 +14,7 @@ const sizeClasses = {
 
 <time
   datetime={date.toISOString()}
-  class={`tracking-widest text-foreground ${sizeClasses[size]}`}
+  class={`font-mono tracking-widest text-foreground ${sizeClasses[size]}`}
 >
   {
     date
