--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -24,7 +24,7 @@ const { page } = Astro.props as {
         class="flex justify-between items-center max-w-screen-md mx-auto px-4"
       >
         <h2
-          class="text-3xl font-bold text-foreground tracking-wider bg-background/80"
+          class="text-heading-32 font-bold text-foreground tracking-wider bg-background/80"
         >
           blog
         </h2>
