style: こ綺麗にした

--- a/src/components/time.astro
+++ b/src/components/time.astro
@@ -7,7 +7,7 @@ type Props = {
 const { date, size = "medium" } = Astro.props;
 const sizeClasses = {
   small: "text-sm",
-  medium: "text-md",
+  medium: "text-label-14 sm:text-label-14 text-gray-700",
   large: "text-lg",
 };
 ---
