style: こ綺麗にした

--- a/src/components/site-logo/site-logo.astro
+++ b/src/components/site-logo/site-logo.astro
@@ -6,7 +6,7 @@ import "@fontsource-variable/montserrat";
 <h1 class="text-2xl font-bold">
   <a
     href={SITE.siteUrl}
-    class="inline-flex items-center gap-[4px] hover:opacity-70 py-1 rounded-lg"
+    class="text-foreground inline-flex items-center gap-[4px] hover:opacity-70 py-1 rounded-lg"
   >
     <p class="font-montserrat">ikuma-t.</p>
     <svg
