--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,8 +10,8 @@ import ThemeSelector from "./theme-selector.astro";
   >
     <SiteLogo />
     <div class="flex items-center gap-4">
-      <Link to="/blog" className="text-lg font-bold">blog</Link>
-      <Link to="/talk" className="text-lg font-bold">talk</Link>
+      <Link to="/blog" className="text-lg text-foreground font-bold">blog</Link>
+      <Link to="/talk" className="text-lg text-foreground font-bold">talk</Link>
       <ThemeSelector />
     </div>
   </nav>
