--- a/src/features/blog/blog.astro
+++ b/src/features/blog/blog.astro
@@ -13,7 +13,7 @@ const { title, publishDate } = Astro.props;
 <div class={"space-y-8 sm:space-y-16"}>
   <hgroup class="space-y-4">
     <h2
-      class="text-center text-heading-24 sm:text-heading-32 font-bold break-all tracking-widest !leading-relaxed"
+      class="text-foreground text-center text-heading-24 sm:text-heading-32 font-bold break-all tracking-widest !leading-relaxed"
     >
       {title}
     </h2>
