--- a/src/stylesheet/globalStyles.css
+++ b/src/stylesheet/globalStyles.css
@@ -2,32 +2,9 @@ body {
   container-type: inline-size;
 }
 
-body::before {
-  --size: 45px;
-  --line: color-mix(in hsl, canvasText, transparent 93%);
-  content: "";
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  background: linear-gradient(
-        90deg,
-        var(--line) 1px,
-        transparent 1px var(--size)
-      )
-      50% 50% / var(--size) var(--size),
-    linear-gradient(var(--line) 1px, transparent 1px var(--size)) 50% 50% /
-      var(--size) var(--size);
-  mask: linear-gradient(-20deg, transparent 50%, white);
-  top: 0;
-  transform-style: flat;
-  pointer-events: none;
-  z-index: 1;
-}
-
-
 :root {
     color-scheme: light dark;
-    --background: 0 0% 100%;
+    --background: 0 0% 95%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -56,8 +33,8 @@ body::before {
 
 [data-theme="dark"]:root {
     color-scheme: dark;
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
+    --background: hsla(171, 80%, 13%, 1);
+    --foreground: 0, 0%, 79%;
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
     --popover: 222.2 84% 4.9%;
