style: こ綺麗にした

--- a/src/features/blog/blog-card.astro
+++ b/src/features/blog/blog-card.astro
@@ -26,7 +26,7 @@ const { blog } = Astro.props as Props;
         </Link>
       </h3>
       <p
-        class="text-gray-800 text-label-13 sm:text-label-14 leading-7 tracking-wide"
+        class="text-gray-800 text-label-13 sm:text-label-14 leading-6 sm:leading-7 tracking-wide"
       >
         {blog.data.description ?? "No description"}
       </p>
