--- a/src/features/blog/blog.astro
+++ b/src/features/blog/blog.astro
@@ -10,10 +10,10 @@ interface Props {
 const { title, publishDate } = Astro.props;
 ---
 
-<div class={"space-y-8 sm:space-y-16"}>
+<div class={"space-y-8 sm:space-y-16 my-8 sm:my-0"}>
   <hgroup class="space-y-4">
     <h2
-      class="text-foreground text-center text-heading-24 sm:text-heading-32 font-bold break-all tracking-widest !leading-relaxed"
+      class="text-foreground text-center text-heading-20 sm:text-heading-32 font-bold break-all tracking-widest !leading-relaxed"
     >
       {title}
     </h2>
