--- a/src/components/copyright.astro
+++ b/src/components/copyright.astro
@@ -1,9 +1,16 @@
 ---
-import { SITE } from '../config';
+import { SITE } from "../config";
 
 const { publishedYear, author } = SITE;
 const today = new Date();
 const currentYear = today.getFullYear().toString();
 ---
 
-<p class="font-semibold text-xs">© {publishedYear >= currentYear ? publishedYear : `${publishedYear}-${currentYear}`} {author}</p>
+<p class="font-semibold text-xs text-muted">
+  © {
+    publishedYear >= currentYear
+      ? publishedYear
+      : `${publishedYear}-${currentYear}`
+  }
+  {author}
+</p>
