--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,7 +4,7 @@ import RssIcon from "./rss-icon.astro";
 import SocialIcon from "./social-icon/social-icon.astro";
 ---
 
-<footer class="bg-background border-t border-gray-300">
+<footer class="bg-background border-t border-muted-foreground">
   <div
     class="max-w-screen-lg mx-auto px-4 py-3 text-foreground flex justify-between items-center"
   >
