--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,9 +4,9 @@ import SiteLogo from "./site-logo/site-logo.astro";
 import ThemeSelector from "./theme-selector.astro";
 ---
 
-<header>
+<header class="border-b border-muted-foreground pb-4 sm:pb-0">
   <nav
-    class="flex items-center justify-between max-w-screen-md mx-auto mt-9 sm:my-12 px-4"
+    class="flex items-center justify-between max-w-screen-md mx-auto mt-4 sm:my-4 px-4"
   >
     <SiteLogo />
     <div class="flex items-center gap-4">
