--- a/src/components/site-logo/site-logo.astro
+++ b/src/components/site-logo/site-logo.astro
@@ -1,14 +1,15 @@
 ---
 import { SITE } from "../../config";
-import "@fontsource-variable/montserrat";
 ---
 
-<h1 class="text-2xl font-bold">
+<h1 class="text-heading-20 tracking-wider">
   <a
     href={SITE.siteUrl}
     class="text-foreground inline-flex items-center gap-[4px] hover:opacity-70 py-1 rounded-lg"
   >
-    <p class="font-montserrat">ikuma-t.</p>
+    <p class="mb-0.5">
+      ikuma-t<span class="ml-1 text-muted">.</span>
+    </p>
     <svg
       width="16"
       height="18"
@@ -18,7 +19,7 @@ import "@fontsource-variable/montserrat";
     >
       <path
         d="M15.364 2.63604C14.1053 1.37737 12.5016 0.520199 10.7558 0.172932C9.00998 -0.174335 7.20038 0.00389577 5.55585 0.685085C3.91131 1.36627 2.50571 2.51983 1.51677 3.99987C0.52784 5.47991 -2.68777e-07 7.21997 0 9C2.68777e-07 10.78 0.527841 12.5201 1.51677 14.0001C2.50571 15.4802 3.91132 16.6337 5.55585 17.3149C7.20039 17.9961 9.00998 18.1743 10.7558 17.8271C12.5016 17.4798 14.1053 16.6226 15.364 15.364L9 9L15.364 2.63604Z"
-        fill="#15803D"></path>
+        class="fill-muted-foreground"></path>
     </svg>
     <svg
       width="18"
@@ -27,7 +28,7 @@ import "@fontsource-variable/montserrat";
       fill="none"
       xmlns="http://www.w3.org/2000/svg"
     >
-      <circle cx="9" cy="9" r="9" fill="#FBBF24"></circle>
+      <circle cx="9" cy="9" r="9" class="fill-muted-foreground"></circle>
     </svg>
     <svg
       width="18"
@@ -38,7 +39,7 @@ import "@fontsource-variable/montserrat";
     >
       <path
         d="M14.3382 16.246C15.8504 15.1319 16.9762 13.5726 17.5577 11.7866C18.1393 10.0007 18.1475 8.0775 17.5812 6.28662C17.015 4.49574 15.9026 2.92691 14.3999 1.79996C12.8973 0.673003 11.0797 0.0444114 9.20195 0.00226595C7.32414 -0.0398795 5.48021 0.506533 3.92853 1.56493C2.37685 2.62334 1.1952 4.14068 0.549143 5.90436C-0.0969093 7.66803 -0.17498 9.58963 0.325872 11.3999C0.826724 13.2102 1.8814 14.8184 3.3421 15.9992L9 9L14.3382 16.246Z"
-        fill="#1D4ED8"></path>
+        class="fill-muted-foreground"></path>
     </svg>
   </a>
 </h1>
