--- a/src/components/theme-selector.astro
+++ b/src/components/theme-selector.astro
@@ -1,12 +1,12 @@
 <theme-toggle class="relative h-6 w-6">
   <button
     id="toggle-theme"
-    class="group hover:opacity-70"
+    class="group hover:opacity-70 cursor-pointer"
     aria-label="Toggle Theme"
     transition:persist
   >
     <span
-      class="absolute left-0 right-0 top-0 opacity-0 group-aria-pressed:opacity-100 text-yellow-400"
+      class="absolute left-0 right-0 top-0 opacity-0 group-aria-pressed:opacity-100 text-muted"
     >
       <svg
         width="24"
@@ -27,7 +27,7 @@
     </span>
 
     <span
-      class="absolute left-0 right-0 top-0 opacity-0 group-aria-[pressed=false]:opacity-100 text-primary"
+      class="absolute left-0 right-0 top-0 opacity-0 group-aria-[pressed=false]:opacity-100 text-muted"
     >
       <svg
         width="24"
