--- a/src/components/social-icon/social-icon.astro
+++ b/src/components/social-icon/social-icon.astro
@@ -1,13 +1,16 @@
 ---
-import { type SocialIcon, socialIcons, socials } from './social-icons';
+import { type SocialIcon, socialIcons, socials } from "./social-icons";
 
 interface Props {
-	icon: SocialIcon;
+  icon: SocialIcon;
 }
 
 const { icon } = Astro.props;
 ---
 
-<a href={socials[icon].href} class="w-6 aspect-square hover:opacity-70 transition-opacity rounded-md">
-    <Fragment set:html={socialIcons[icon]} class="text-white" />
+<a
+  href={socials[icon].href}
+  class="w-6 aspect-square hover:opacity-70 transition-opacity rounded-md"
+>
+  <Fragment set:html={socialIcons[icon]} class="fill-gray-300" />
 </a>
