--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -36,7 +36,7 @@ const { page } = Astro.props as {
     <div class="grid gap-y-8">
       {page.data.map((blog) => <BlogCard blog={blog} />)}
     </div>
-    <div class="mt-8">
+    <div>
       <Author />
     </div>
   </section>
