style: 綺麗にした

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -9,7 +9,7 @@ import SocialIcon from "./social-icon/social-icon.astro";
     class="max-w-screen-lg mx-auto px-4 py-3 text-foreground flex justify-between items-center"
   >
     <Copyright />
-    <div class="flex gap-3">
+    <div class="flex gap-1.5 sm:gap-3">
       <SocialIcon icon="Github" />
       <SocialIcon icon="X" />
       <SocialIcon icon="Zenn" />
