--- a/src/features/blog/blog-card.astro
+++ b/src/features/blog/blog-card.astro
@@ -12,7 +12,7 @@ const { blog } = Astro.props as Props;
 ---
 
 <article
-  class="card grid gap-4 sm:p-4"
+  class="card grid gap-4 py-1.5 px-2.5 sm:p-4"
   aria-labelledby={blog.id}
   data-href={buildUrl(blog.id)}
 >
