style: 綺麗にした

--- a/src/stylesheet/markdown.css
+++ b/src/stylesheet/markdown.css
@@ -32,23 +32,23 @@
 }
 
 .prose h2 {
-    @apply text-xl sm:text-2xl mt-20;
+    @apply text-xl sm:text-2xl mt-8 sm:mt-20;
 }
 
 .prose h3 {
-    @apply text-lg sm:text-xl mt-16 mb-4 text-foreground/90;
+    @apply text-base sm:text-xl mt-4 sm:mt-16 mb-4 text-foreground/90;
 }
 
 .prose p + h3 {
-    @apply mt-16;
+    @apply mt-8 sm:mt-16;
 }
 
 .prose h2 + h3 {
-    @apply mt-4;
+    @apply mt-4 sm:mt-8;
 }
 
 .prose h4 {
-  @apply mt-8;
+  @apply mt-4 sm:mt-8;
 }
 
 .prose p,
@@ -59,7 +59,7 @@
 .prose td,
 .prose p code,
 .prose li code{
-  @apply !text-foreground text-base !leading-7 sm:!leading-8 tracking-wide;
+  @apply !text-foreground text-sm sm:text-base !leading-7 sm:!leading-8 tracking-wide;
 }
 
 .prose blockquote * {
@@ -71,7 +71,7 @@
 }
 
 .prose a {
-  @apply underline decoration-primary/70 decoration-2 underline-offset-[0.35rem] text-foreground/70;
+  @apply text-foreground/70 no-underline text-muted;
 }
 
 .prose a:hover {
