--- a/src/components/tips.astro
+++ b/src/components/tips.astro
@@ -3,7 +3,7 @@ const { title } = Astro.props as { title: string };
 ---
 
 <article
-  class="border-l-4 border-primary rounded-rt-md px-6 py-4 mt-8 bg-muted rounded-r-md"
+  class="border-l-4 border-muted rounded-rt-md px-6 py-4 mt-8 bg-muted-foreground rounded-r-md"
 >
   <h4 class="!mt-2 mb-4">{title}</h4>
   <slot />
