スタイルの調整とリスト要素の追加

--- a/src/features/talk/talk-card.astro
+++ b/src/features/talk/talk-card.astro
@@ -14,7 +14,7 @@ const image = talk.data.enclosures.at(0);
 ---
 
 <a
-  class="rounded-md grid gap-1 grid-rows-subgrid row-span-3 hover:brightness-90"
+  class="rounded-md grid gap-1 grid-rows-subgrid row-span-3"
   href={buildUrl(id)}
 >
   <figure class="aspect-video relative">
