--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -33,11 +33,46 @@ const { page } = Astro.props as {
         </div>
       </div>
     </div>
-    <div class="grid gap-y-8">
-      {page.data.map((blog) => <BlogCard blog={blog} />)}
-    </div>
+    <ul class="grid place-self-start gap-y-8 sm:gap-y-1">
+      {
+        page.data.map((blog) => (
+          <li>
+            <BlogCard blog={blog} />
+          </li>
+        ))
+      }
+    </ul>
     <div>
       <Author />
     </div>
   </section>
 </Document>
+
+<style is:global>
+  ul::after {
+    border-radius: 1rem;
+    content: "";
+    position: absolute;
+    background: hsl(0 0% 10%);
+    pointer-events: none;
+    z-index: -2;
+    position-anchor: var(--anchor);
+    inset: anchor(top) anchor(right) anchor(bottom) anchor(left);
+    transition: inset 0.2s;
+  }
+
+  [data-theme="light"] ul::after {
+    z-index: 0;
+    background: var(--ds-gray-100);
+    opacity: 0.2;
+  }
+
+  ul:has(li:hover) {
+    --anchor: --active;
+    --active: 1;
+  }
+  li:hover {
+    anchor-name: --active;
+    --li-active: 1;
+  }
+</style>
