style: クラス名の調整とスタイルの改善

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -33,7 +33,7 @@ const { page } = Astro.props as {
         </div>
       </div>
     </div>
-    <ul class="grid place-self-start gap-y-8 sm:gap-y-1">
+    <ul class="grid place-self-start gap-y-8">
       {
         page.data.map((blog) => (
           <li>
@@ -57,13 +57,14 @@ const { page } = Astro.props as {
     pointer-events: none;
     z-index: -2;
     position-anchor: var(--anchor);
-    inset: anchor(top) anchor(right) anchor(bottom) anchor(left);
+    inset: calc(anchor(top) - 20px) calc(anchor(right) - 20px)
+      calc(anchor(bottom) - 20px) calc(anchor(left) - 20px);
     transition: inset 0.2s;
   }
 
   [data-theme="light"] ul::after {
     z-index: 0;
-    background: var(--ds-gray-100);
+    background: var(--ds-gray-200);
     opacity: 0.2;
   }
 
