--- a/src/components/ui/author.astro
+++ b/src/components/ui/author.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import authorImage from "../assets/ikuma.svg";
+import authorImage from "../../assets/ikuma.svg";
 import { Badge } from "./badge";
 ---
 
