--- a/src/components/ui/pagination/page-selector.astro
+++ b/src/components/ui/pagination/page-selector.astro
@@ -2,7 +2,7 @@
 import type { CollectionKey } from "astro:content";
 import type { Page } from "astro";
 import { Icon } from "astro-icon/components";
-import { cn } from "../../utils/cn";
+import { cn } from "../../../shared/lib/cn";
 import Link from "../link.astro";
 
 type Props = {
