--- a/src/features/blog/ui/blog.astro
+++ b/src/features/blog/ui/blog.astro
@@ -1,6 +1,6 @@
 ---
-import Time from "../../components/time.astro";
-import "../../stylesheet/markdown.css";
+import Time from "../../../components/ui/time.astro";
+import "../../../stylesheet/markdown.css";
 
 interface Props {
   title: string;
