--- a/src/pages/talk/[id].astro
+++ b/src/pages/talk/[id].astro
@@ -1,7 +1,7 @@
 ---
 import { render } from "astro:content";
 import { createMarkdownProcessor } from "@astrojs/markdown-remark";
-import Author from "../../components/author.astro";
+import Author from "../../components/ui/author.astro";
 import Talk from "../../features/talk/talk.astro";
 import {
   getTalkEmbedUrl,
