--- a/src/features/talk/talk.astro
+++ b/src/features/talk/talk.astro
@@ -1,5 +1,5 @@
 ---
-import Time from "../../components/time.astro";
+import Time from "../../components/ui/time.astro";
 import "../../stylesheet/markdown.css";
 
 interface Props {
