--- a/src/layouts/document.astro
+++ b/src/layouts/document.astro
@@ -3,9 +3,9 @@ import "../stylesheet/globalStyles.css";
 import "../styles/global.css";
 import { ClientRouter } from "astro:transitions";
 import ogImage from "../assets/ogp.png";
-import Footer from "../components/footer.astro";
-import Header from "../components/header.astro";
-import ThemeProvider from "../components/theme-provider.astro";
+import Footer from "../components/ui/footer.astro";
+import Header from "../components/ui/header.astro";
+import ThemeProvider from "../components/ui/theme-provider.astro";
 import { SITE } from "../config";
 
 type Props = {
