--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Author from "../components/author.astro";
-import { getBlogs } from "../features/blog/blog";
-import BlogCard from "../features/blog/blog-card.astro";
+import Author from "../components/ui/author.astro";
+import { getBlogs } from "../features/blog/model/blog";
+import BlogCard from "../features/blog/ui/blog-card.astro";
 import Document from "../layouts/document.astro";
 
 const allBlogs = await getBlogs();
