refactor: FSDに基づいてconfigを移動

--- a/src/components/ui/site-logo/site-logo.astro
+++ b/src/components/ui/site-logo/site-logo.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE } from "../../../config";
+import { SITE } from "../../../shared/config/site";
 ---
 
 <h1 class="text-heading-20 tracking-wider">
