--- a/src/layouts/document.astro
+++ b/src/layouts/document.astro
@@ -6,7 +6,7 @@ import ogImage from "../assets/ogp.png";
 import Footer from "../components/ui/footer.astro";
 import Header from "../components/ui/header.astro";
 import ThemeProvider from "../components/ui/theme-provider.astro";
-import { SITE } from "../config";
+import { SITE } from "../shared/config/site";
 
 type Props = {
   title?: string;
