--- a/src/components/ui/copyright.astro
+++ b/src/components/ui/copyright.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE } from "../../config";
+import { SITE } from "../../shared/config/site";
 
 const { publishedYear, author } = SITE;
 const today = new Date();
